# VTIL-NativeLifters

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  VTIL-NativeLifters.sln  VTIL.Lifter.sln  appveyor.yml
.github/workflows/: cmake.yml
Dependencies/: CMakeLists.txt
NativeLifters-Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
NativeLifters-Core/NativeLifters-Tests/: CMakeLists.txt  main.cpp
NativeLifters-Core/amd64/: amd64.cpp  amd64.hpp  flags.hpp  operative.hpp
NativeLifters-Core/amd64/semantic/: arithmetic.cpp  arithmetic.hpp  branch.cpp  comparison.cpp  flags.cpp  invalid.hpp  misc.cpp  transfer.hpp
NativeLifters-Core/core/: operative.hpp  processing_flags.hpp  recursive_descent.cpp  recursive_descent.hpp
NativeLifters-Core/includes/lifters/: amd64  core
NativeLifters-Tests/: CMakeLists.txt  Tests.vcxproj  Tests.vcxproj.filters  fuzzer.hpp  main.cpp
NativeLifters-Tests/emulator/: _emulator.masm  emulator.cpp  emulator.hpp  rwx_allocator.cpp  rwx_allocator.hpp
NativeLifters-X86/lifter/: lifter_x86.cpp  lifter_x86_context.hpp  lifter_x86_regdefs.hpp
VTIL.Lifter/: VTIL.Lifter.cpp  VTIL.Lifter.vcxproj  VTIL.Lifter.vcxproj.filters  arch.hpp  native_operand.hpp  operand_desc.hpp  operations.hpp  operative.hpp  semantic.hpp
VTIL.Lifter/AMD64/: amd64.hpp  arithmetic.hpp  flags.hpp
